superbitty/tests/ui/BitFieldCompatible/structs_and_unions.stderr
error: structs and unions cannot `#[derive(BitFieldCompatible)]` and must implement it themselves
 --> $DIR/structs_and_unions.rs:4:1
  |
4 | struct Foo {}
  | ^^^^^^^^^^^^^

error: structs and unions cannot `#[derive(BitFieldCompatible)]` and must implement it themselves
 --> $DIR/structs_and_unions.rs:7:1
  |
7 | union Bar { _v: () }
  | ^^^^^^^^^^^^^^^^^^^^
