superbitty/tests/ui/BitFieldCompatible/structs_and_unions.rs
use superbitty::BitFieldCompatible;

#[derive(BitFieldCompatible)]
struct Foo {}

#[derive(BitFieldCompatible)]
union Bar { _v: () }

fn main() {}
